# unidash

./: .eslintrc  .gitignore  .npmignore  .prettierrc.json  README.md  TODO.MD  backtest_config.yaml  bot_config.yaml  config.yaml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: backtest.py  backtest.ts  bot.py  calc.py  chart.py  chart.ts  config.py  config.ts  constants.py  constants.ts  core.py  db.ts  exchange.py  exchange_test.py  index.ts  main.py  main.ts  pipeline.py  pushAlert.ts  pytrade.ts  reporting.py  signals.ts  strategy.ts  swaps.ts  swapshistory.ts  wma.py
src/bot/: backtest.py  bot.py  config.py  constants.py  exchange.py  reporting.py
src/core/: __init__.py  calc.py  chart.py  config.py  kernel.py
src/py/: heiken_ashi.py  iwma.py  main.py  ohlc.py  portfolio.py  pyproject.toml  resample.py  signal.py  signal_compare.py  wma.py
src/sql/: 00010_db.sql  00020_tables.sql  00030_transform.sql  mine.sql
src/types/: index.d.ts
