[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="MutantStopBot"
version="v0.0.1"
dependencies = [
    "requests",
    "orjson",
    "v20",
    "pandas",
    "numpy",
    "ta-lib",
    "pyyaml"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/*.py",
    "src/core/*.py",
]

[project.optional-dependencies]
dev = [
	"pytest",
    "mypy",
    "python-lsp-server",
    "types-requests",
    "alive-progress",
    "ruff",
    'pandas-stubs',
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D", "PL", "C901"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
